# gcp-agent-mvp

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/agents/: gcp-agent.md  gcp-data.md  gcp-infra.md
adk_agent/: README.md  deploy.py  pyproject.toml  query_remote.py  run_local.py
adk_agent/src/coingecko_adk/: __init__.py  agent.py
agent/: README.md  pyproject.toml
agent/src/coingecko_agent/: __init__.py  ask.py  client_factory.py  config.py  create_agent.py
docs/: architecture.drawio  architecture.md
docs/decisions/: ADR-0001-stack.md
docs/deck/: coingecko-pipeline-deck.md  presentation.html
docs/phases/: 00-foundations.md  01-ingestion.md  02-curated.md  03-agent.md  04-deck.md  05-adk-agent.md
docs/superpowers/specs/: 2026-06-26-coingecko-pipeline-design.md
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/apis/: main.tf
infra/terraform/modules/artifact_registry/: main.tf
infra/terraform/modules/bigquery/: main.tf
infra/terraform/modules/cloudrun_job/: main.tf
infra/terraform/modules/curated/: main.tf
infra/terraform/modules/gcs/: main.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/scheduler/: main.tf
infra/terraform/modules/secrets/: main.tf
ingestion/: .dockerignore  Dockerfile  pyproject.toml
ingestion/src/coingecko_mvp/: __init__.py  bq_loader.py  client.py  config.py  gcs_writer.py  main.py  transform.py
ingestion/tests/: test_client.py  test_main.py  test_transform.py
transform/sql/: dim_coin.sql  latest_prices.sql  market_global_daily.sql  ohlc_timeseries.sql
