[project]
name = "coingecko-adk-agent"
version = "0.1.0"
description = "Agente ADK con BigQuery toolset sobre coingecko_curated, desplegable a Agent Engine"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform[agent_engines,adk]>=1.95",
    "google-cloud-bigquery>=3.25",
    "google-cloud-secret-manager>=2.20",
    "httpx>=0.27",
    "cloudpickle>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coingecko_adk"]
