[project]
name = "coingecko-agent"
version = "0.1.0"
description = "Data Agent (Conversational Analytics API) sobre coingecko_curated"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-geminidataanalytics>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coingecko_agent"]
